Changes after 2.2.1:

Detailed change log :

- CPU
  - fixed XMM registers restore in FXRSTOR instruction (Andrej Palkovsky)
  - print registers dump to the log if tripple fault occured
  - fixed PANIC in LTR instruction (Stanislav)

- CPU (x86-64) (Stanislav)
  - implemented call_far/ret_far/jmp_far instructions in long mode
  - fixed IRET operation in long mode
  - fixed bug prevented setting of NXE/FFXSR bits in MSR.EFER register
  - implemented RDTSCP instruction
  - do not check CS.limit when prefetching instructions in long mode
  - fixed masked write instructions (MASKMOVQ/MASKMOVDQU) in long mode

- Bochs debugger
  - Fixed bug in bochs debugger caused breakpoints doesn't fire sometimes
    (Alexander Krisak)
  - watchpoints in device memory fixed (Nickolai Zeldovich)

- I/O devices (Volker)
  - serial
    - new serial mode 'socket' connects a network socket (#SF patch by Andrew Backer)
  - hard drive / cdrom
    - assign a unique serial number to each drive (fixes harddrive detection 
      problems with Linux kernels 2.6.x: "ignoring undecoded slave")
    - geometry autodetection for 'flat' hard disk images added. Works with 
      images created with bximage (heads = 16, sectors per track = 63)
    - ATAPI command 'read cd' partially implemented
  - floppy
    - fixes for OS/2 (patch by Robin Kay)
    - more accurate timing for read data and format track commands using a motor
      speed of 300 RPM
    - disk change line behaviour fixed (patch by Ben Lunt)
  - cmos
    - RTC 12-hour and binary mode implemented
    - number of CMOS registers changed from 64 to 128
    - bochsrc option 'cmosimage' improved
  - speaker
    - simple speaker support for OS X added (patch by brianonn@telus.net)
  - pci
    - BeOS boot failure fix in the PCI IDE code

- display libraries
  - general
    - new syntax for the userbutton shortcut string and more keys supported
  - win32
    - fixed keycode generation for right alt/ctrl/shift keys